<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Registration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/use_name"
            android:hint="@string/reg_name"
            style="@style/registration_edt"
            android:drawableLeft="@drawable/user_name"/>
        <EditText
            android:id="@+id/user_email"
            android:hint="@string/reg_email"
            style="@style/registration_edt"
            android:drawableLeft="@drawable/user_email"/>
        <EditText
            android:id="@+id/user_pass"
            android:hint="@string/reg_pass"
            android:inputType="numberPassword"
            style="@style/registration_edt"
            android:drawableLeft="@drawable/user_pass"/>
        <RadioGroup
            android:id="@+id/user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rd_male"
                style="@style/reg_radio_btn"
                android:drawableLeft="@drawable/male"
                android:onClick="onRadioButtonCLicked"/>
            <RadioButton
                android:id="@+id/rd_female"
                style="@style/reg_radio_btn"
                android:drawableLeft="@drawable/female"
                android:onClick="onRadioButtonCLicked"/>
        </RadioGroup>
        <com.example.userprofile.Circular_Image_View.RoundedImageView
            android:id="@+id/user_profile_photo"
            app:srcCompat="@drawable/default_img"
            style="@style/reg_imageview" />
        <TextView
            android:id="@+id/photo"
            style="@style/reg_text"
            android:text="@string/img_text"/>
        <Button
            android:id="@+id/user_signup"
            style="@style/reg_button"
            android:text="@string/btn_signup"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
        <TextView
            style="@style/reg_text"
            android:text="@string/reg_question" />
            <TextView
                android:id="@+id/user_login_page"
                style="@style/reg_text"
                android:text="@string/user_login"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>