<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">
<EditText
    android:id="@+id/user_id"
    android:hint="@string/login_id_hint"
    style="@style/registration_edt"/>
    <EditText
        android:id="@+id/user_pass"
        android:hint=""
       style="@style/registration_edt"/>
        <Button
            android:id="@+id/user_login"
            android:text="@string/login"
            style="@style/reg_button"/>
        <TextView
            android:id="@+id/new_account"
           style="@style/reg_text"
            android:text="@string/new_acc"/>
    </LinearLayout>
</RelativeLayout>